<resources>
    <string name="a11y_no_data">No data</string>
    <string name="a11y_no_permission">No permission to access data</string>
    <string name="a11y_template_range">%1$f of %2$f</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_font_family_body_1_material">sans-serif</string>
    <string name="abc_font_family_body_2_material">sans-serif-medium</string>
    <string name="abc_font_family_button_material">sans-serif-medium</string>
    <string name="abc_font_family_caption_material">sans-serif</string>
    <string name="abc_font_family_display_1_material">sans-serif</string>
    <string name="abc_font_family_display_2_material">sans-serif</string>
    <string name="abc_font_family_display_3_material">sans-serif</string>
    <string name="abc_font_family_display_4_material">sans-serif-light</string>
    <string name="abc_font_family_headline_material">sans-serif</string>
    <string name="abc_font_family_menu_material">sans-serif</string>
    <string name="abc_font_family_subhead_material">sans-serif</string>
    <string name="abc_font_family_title_material">sans-serif-medium</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about_pref">About</string>
    <string name="access_revoked_info">Revoquesti con ésitu\'l pase d\'accesu AntennaPod a la to cuenta. Pa completar el procesu, tienes de desaniciar esta aplicación del llistáu d\'aplicaciones aprobaes nos axustes de la to cuenta nel sitiu web de Flattr.</string>
    <string name="access_revoked_title">Revocóse l\'accesu</string>
    <string name="action_forbidden_msg">AntennaPod nun tien permisu pa esta aición. La razón quiciabes seya que se revocare\'l pase d\'accesu d\'AntennaPod a la to cuenta. Pues o reautenticate, o visitar el sitiu web de la cosa.</string>
    <string name="action_forbidden_title">Torgóse la aición</string>
    <string name="activate_auto_download">Activar descarga automática</string>
    <string name="add_feed_label">Amestar podcast</string>
    <string name="add_to_favorite_label">Amestar a favoritos</string>
    <string name="add_to_queue_label">Amestar a la cola</string>
    <string name="added_to_favorites">Amestóse a favoritos</string>
    <string name="added_to_queue_label">Amestóse a la cola</string>
    <string name="all_episodes_short_label">Too</string>
    <string name="all_label">Too</string>
    <string name="app_name">AntennaPod Debug</string>
    <string name="appbar_scrolling_view_behavior">android.support.design.widget.AppBarLayout$ScrollingViewBehavior</string>
    <string name="appearance">Appearance</string>
    <string name="ascending">Ascendente</string>
    <string name="audio_controls">Controles d\'audiu</string>
    <string name="audio_effects">Efeutos d\'audiu</string>
    <string name="authenticate_label">Autenticar</string>
    <string name="authenticate_now_label">Autenticar</string>
    <string name="authentication_descr">Change your username and password for this podcast and its episodes.</string>
    <string name="authentication_label">Autenticación</string>
    <string name="authentication_notification_msg">El recursu que solicitesti rique un nome d\'usuariu y una contraseña</string>
    <string name="authentication_notification_title">Ríquese l\'autenticación</string>
    <string name="author_label">Autor</string>
    <string name="auto_delete_label">Auto Delete Episode</string>
    <string name="auto_download_apply_to_items_message">The new Auto Download setting will automatically be applied to new episodes.\nDo you also want to apply it to previously published episodes?</string>
    <string name="auto_download_apply_to_items_title">Aplicar a episodios previos</string>
    <string name="auto_download_label">Incluyir en descargues automátiques</string>
    <string name="auto_download_settings_label">Auto Download Settings</string>
    <string name="auto_enable_label">Auto-enable</string>
    <string name="auto_flattr_after_percent">Flattr episode as soon as %d percent have been played</string>
    <string name="auto_flattr_ater_beginning">Flattr episode when playback starts</string>
    <string name="auto_flattr_ater_end">Flattr episode when playback ends</string>
    <string name="auto_flattr_enable">Enable automatic flattring</string>
    <string name="automation">Automation</string>
    <string name="back_button_default">Default</string>
    <string name="back_button_double_tap">Double tap to exit</string>
    <string name="back_button_go_to_page">Go to page…</string>
    <string name="back_button_go_to_page_title">Select page</string>
    <string name="batch_edit">Batch edit</string>
    <string name="choose_data_directory">Choose Data Folder</string>
    <string name="choose_file_from_external_application">Use external application</string>
    <string name="choose_file_from_filesystem">From local filesystem</string>
    <string name="clear_queue_label">Llimpiar cola</string>
    <string name="date">Data</string>
    <string name="descending">Descendente</string>
    <string name="duration">Duración</string>
    <string name="episode_title">Títulu d\'episodiu</string>
    <string name="feed_title">Títulu del feed</string>
    <string name="filter">Filter</string>
    <string name="flattr_auth_explanation">Primi\'l botón d\'embaxo pa entamar el procesu d\'autenticación. Amosaráse la pantalla d\'aniciu de sesión de Flattr y pidirásete que-y deas permisu a AntennaPod pa facer flattr a coses. Dempués d\'eso, volverás a esta pantalla automáticamente.</string>
    <string name="gpodnetauth_finish_butgomainscreen">Dir a la pantalla principal</string>
    <string name="gpodnetauth_finish_butsyncnow">Start sync now</string>
    <string name="gpodnetauth_finish_descr">Congratulations! Your gpodder.net account is now linked with your device. AntennaPod will from now on automatically sync subscriptions on your device with your gpodder.net account.</string>
    <string name="gpodnetauth_finish_title">Login successful!</string>
    <string name="gpodnetauth_login_butLabel">Login</string>
    <string name="gpodnetauth_login_descr">Welcome to the gpodder.net login process. First, type in your login information:</string>
    <string name="gpodnetauth_login_register">If you do not have an account yet, you can create one here:\nhttps://gpodder.net/register/</string>
    <string name="gpodnetauth_login_title">Login</string>
    <string name="host_label">Agospiu</string>
    <string name="html_export_label">Esportación de HTML</string>
    <string name="import_export">Database import/export</string>
    <string name="import_export_pref">Import/Export</string>
    <string name="import_export_search_keywords">backup, restore</string>
    <string name="load_complete_feed">Completóse\'l refrescu\'l feed</string>
    <string name="mark_all_read_label">Marcar too ccomo reproducío</string>
    <string name="mark_all_seen_label">Conseñar too como visto</string>
    <string name="opml_export_label">Esportación d\'OPML</string>
    <string name="opml_import_explanation_1">Choose a specific file path from the local filesystem.</string>
    <string name="opml_import_explanation_2">Use an external applications like Dropbox, Google Drive or your favourite file manager to open an OPML file.</string>
    <string name="opml_import_explanation_3">Many applications like Google Mail, Dropbox, Google Drive and most file managers can open OPML files with AntennaPod.</string>
    <string name="opml_import_label">Importación d\'OPML</string>
    <string name="optional_hint">(Opcional)</string>
    <string name="password_label">Contraseña</string>
    <string name="player_go_to_picture_in_picture">Picture-in-picture mode</string>
    <string name="port_label">Puertu</string>
    <string name="pref_auto_delete_sum">Desanicia l\'episodiu al completase la reproducción</string>
    <string name="pref_auto_delete_title">Auto Delete</string>
    <string name="pref_auto_flattr_sum">Configure automatic flattring</string>
    <string name="pref_auto_flattr_title">Automatic Flattr</string>
    <string name="pref_delete_removes_from_queue_sum">Automatically remove an episode from the queue when it is deleted.</string>
    <string name="pref_delete_removes_from_queue_title">Delete removes from Queue</string>
    <string name="pref_favorite_keeps_episodes_sum">Keep episodes when they are marked Favorite</string>
    <string name="pref_favorite_keeps_episodes_title">Keep Favorite Episodes</string>
    <string name="pref_flattr_auth_sum">Sign in to your flattr account to flattr things directly from the app.</string>
    <string name="pref_flattr_auth_title">Aniciu de sesión de Flattr</string>
    <string name="pref_image_cache_size_sum">Tamañu del discu pa la caché d\'imáxenes.</string>
    <string name="pref_image_cache_size_title">Image Cache Size</string>
    <string name="pref_revokeAccess_sum">Revoca\'l permisu d\'accesu a la to cuenta Flatrr pa esta aplicación.</string>
    <string name="pref_revokeAccess_title">Revoke access</string>
    <string name="proxy_type_label">Triba</string>
    <string name="random">Random</string>
    <string name="refresh_label">Refrescar</string>
    <string name="remove_feed_label">Desaniciar podcast</string>
    <string name="remove_from_favorite_label">Desaniciar de favoritos</string>
    <string name="rename_feed_label">Renomar podcast</string>
    <string name="return_home_label">Volver al aniciu</string>
    <string name="search_label">Search</string>
    <string name="set_sleeptimer_label">Set sleep timer</string>
    <string name="share_feed_url_label">Compartir URL del feed</string>
    <string name="share_file_label">Share File</string>
    <string name="share_item_url_label">Compatir URL del ficheru del episodiu</string>
    <string name="share_item_url_with_position_label">Share Media File URL with Position</string>
    <string name="share_label">Compartir...</string>
    <string name="share_link_label">Compartir enllaz</string>
    <string name="share_link_with_position_label">Share Episode URL with Position</string>
    <string name="sleep_timer_label">Sleep timer</string>
    <string name="smart_shuffle">Smart Shuffle</string>
    <string name="sort">Ordenar</string>
    <string name="statistics_mode_count_all">Sum up all podcasts marked as played</string>
    <string name="statistics_mode_normal">Calculate duration that was actually played. Playing twice is counted twice, while marking as played is not counted</string>
    <string name="statistics_speed_not_counted">Notice: Playback speed is never taken into account.</string>
    <string name="support_label">Flattr this</string>
    <string name="txtvfeedurl_label">Amestar podcast pola URL</string>
    <string name="username_label">Nome d\'usuariu</string>
    <string name="visit_website_label">Visitar sitiu web</string>
</resources>