<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
    <item android:icon="?attr/ic_fav" android:id="@+id/add_to_favorites_item" android:title="@string/add_to_favorite_label" app:showAsAction="always"/>
    <item android:icon="?attr/ic_unfav" android:id="@+id/remove_from_favorites_item" android:title="@string/remove_from_favorite_label" app:showAsAction="always"/>
    <item android:icon="?attr/ic_sleep_off" android:id="@+id/disable_sleeptimer_item" android:title="@string/sleep_timer_label" app:showAsAction="always"/>
    <item android:icon="?attr/ic_sleep" android:id="@+id/set_sleeptimer_item" android:title="@string/set_sleeptimer_label" app:showAsAction="always"/>
    <item android:id="@+id/audio_controls" android:title="@string/audio_controls" app:showAsAction="always"/>
    <item android:icon="?attr/location_web_site" android:id="@+id/visit_website_item" android:visible="false" android:title="@string/visit_website_label" app:showAsAction="collapseActionView"/>
    <item android:id="@+id/player_go_to_picture_in_picture" android:visible="false" android:title="@string/player_go_to_picture_in_picture" app:showAsAction="collapseActionView"/>
    <item android:icon="?attr/social_share" android:id="@+id/share_item" android:menuCategory="container" android:title="@string/share_label" app:showAsAction="ifRoom">
        <menu>
            <item android:id="@+id/share_link_item" android:menuCategory="container" android:title="@string/share_link_label"/>
            <item android:id="@+id/share_link_with_position_item" android:menuCategory="container" android:title="@string/share_link_with_position_label"/>
            <item android:id="@+id/share_download_url_item" android:menuCategory="container" android:title="@string/share_item_url_label"/>
            <item android:id="@+id/share_download_url_with_position_item" android:menuCategory="container" android:title="@string/share_item_url_with_position_label"/>
            <item android:id="@+id/share_file" android:menuCategory="container" android:title="@string/share_file_label"/>
        </menu>
    </item>
    <item android:id="@+id/support_item" android:visible="false" android:title="@string/support_label" app:showAsAction="collapseActionView"/>
</menu>
