<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt">
    <item android:id="@+id/queue_lock" android:menuCategory="container" android:title="" app:showAsAction="always"/>
    <item android:icon="?attr/navigation_refresh" android:id="@+id/refresh_item" android:menuCategory="container" android:title="@string/refresh_label" app:showAsAction="always"/>
    <item android:icon="?attr/action_search" android:id="@+id/action_search" android:title="@string/search_label" app:actionViewClass="android.support.v7.widget.SearchView" app:showAsAction="never|ifRoom|collapseActionView"/>
    <item android:icon="?attr/navigation_accept" android:id="@+id/clear_queue" android:menuCategory="container" android:title="@string/clear_queue_label" app:showAsAction="collapseActionView"/>
    <item android:id="@+id/queue_sort" android:title="@string/sort">
        <menu>
            <item android:id="@+id/queue_sort_date" android:title="@string/date">
                <menu>
                    <item android:id="@+id/queue_sort_date_asc" android:title="@string/ascending"/>
                    <item android:id="@+id/queue_sort_date_desc" android:title="@string/descending"/>
                </menu>
            </item>
            <item android:id="@+id/queue_sort_duration" android:title="@string/duration">
                <menu>
                    <item android:id="@+id/queue_sort_duration_asc" android:title="@string/ascending"/>
                    <item android:id="@+id/queue_sort_duration_desc" android:title="@string/descending"/>
                </menu>
            </item>
            <item android:id="@+id/queue_sort_episode_title" android:title="@string/episode_title">
                <menu>
                    <item android:id="@+id/queue_sort_episode_title_asc" android:title="@string/ascending"/>
                    <item android:id="@+id/queue_sort_episode_title_desc" android:title="@string/descending"/>
                </menu>
            </item>
            <item android:id="@+id/queue_sort_feed_title" android:title="@string/feed_title">
                <menu>
                    <item android:id="@+id/queue_sort_feed_title_asc" android:title="@string/ascending"/>
                    <item android:id="@+id/queue_sort_feed_title_desc" android:title="@string/descending"/>
                </menu>
            </item>
            <item android:id="@+id/queue_sort_random" android:title="@string/random"/>
            <item android:id="@+id/queue_sort_smart_shuffle" android:title="@string/smart_shuffle">
                <menu>
                    <item android:id="@+id/queue_sort_smart_shuffle_asc" android:title="@string/ascending"/>
                    <item android:id="@+id/queue_sort_smart_shuffle_desc" android:title="@string/descending"/>
                </menu>
            </item>
        </menu>
    </item>
</menu>
