<?xml version="1.0" encoding="utf-8"?>
<RadioGroup xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:padding="16dp" android:layout_width="match_parent" android:layout_height="wrap_content">
    <TextView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginBottom="16dp" android:text="@string/statistics_speed_not_counted"/>
    <RadioButton android:id="@+id/statistics_mode_normal" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/statistics_mode_normal"/>
    <RadioButton android:id="@+id/statistics_mode_count_all" android:layout_width="match_parent" android:layout_height="wrap_content" android:text="@string/statistics_mode_count_all"/>
</RadioGroup>
