<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:id="@+id/txtvExplanation" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="8dp" android:text="@string/flattr_auth_explanation"/>
    <Button android:layout_gravity="center_horizontal" android:id="@+id/but_authenticate" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="8dp" android:text="@string/authenticate_label"/>
    <Button android:layout_gravity="center_horizontal" android:id="@+id/but_return_home" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/return_home_label"/>
</LinearLayout>
