<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:aapt="http://schemas.android.com/aapt" android:layout_width="match_parent" android:layout_height="match_parent">
    <TextView android:id="@+id/txtvTitle" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="16dp" android:text="@string/gpodnetauth_login_title" android:layout_alignParentTop="true" style="@style/AntennaPod.TextView.Heading"/>
    <TextView android:textSize="@dimen/text_size_medium" android:textColor="?android:attr/textColorSecondary" android:id="@+id/txtvDescription" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="16dp" android:text="@string/gpodnetauth_login_descr" android:layout_below="@+id/txtvTitle"/>
    <EditText android:id="@+id/etxtUsername" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="8dp" android:hint="@string/username_label" android:cursorVisible="true" android:maxLines="1" android:layout_below="@+id/txtvDescription" android:inputType="text" android:imeOptions="actionNext" android:nextFocusForward="@+id/etxtPassword"/>
    <EditText android:id="@+id/etxtPassword" android:focusable="true" android:focusableInTouchMode="true" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="8dp" android:hint="@string/password_label" android:cursorVisible="true" android:layout_below="@+id/etxtUsername" android:inputType="textPassword" android:imeOptions="actionGo" android:imeActionLabel="@string/gpodnetauth_login_butLabel"/>
    <Button android:id="@+id/butLogin" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_margin="8dp" android:text="@string/gpodnetauth_login_butLabel" android:layout_below="@+id/etxtPassword" android:layout_alignParentRight="true"/>
    <TextView android:textSize="@dimen/text_size_small" android:textColor="@color/download_failed_red" android:ellipsize="end" android:gravity="center" android:id="@+id/txtvError" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_margin="16dp" android:maxLines="2" android:layout_toLeftOf="@+id/butLogin" android:layout_below="@+id/etxtPassword" android:layout_alignParentLeft="true"/>
    <ProgressBar android:id="@+id/progBarLogin" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_toLeftOf="@+id/butLogin" android:layout_alignTop="@+id/butLogin"/>
    <TextView android:textSize="@dimen/text_size_medium" android:textColor="?android:attr/textColorSecondary" android:autoLink="web" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="16dp" android:text="@string/gpodnetauth_login_register" android:layout_below="@+id/butLogin"/>
</RelativeLayout>
